--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -61,11 +61,15 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push
+      - name: Build and push v3.8
         uses: docker/build-push-action@v2
         with:
           context: .
+          build-args: 3.8
+          dockerfile: Dockerfile
           platforms: linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}_py3.8
           labels: ${{ steps.meta.outputs.labels }}
