--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -65,7 +65,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          build-args: 3.8
+          build-args: PYTHON_VERSION=3.8
           dockerfile: Dockerfile
           platforms: linux/arm64
           cache-from: type=gha
