--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -67,9 +67,22 @@ jobs:
           context: .
           build-args: PYTHON_VERSION=3.8
           dockerfile: Dockerfile
-          platforms: linux/arm64
+          platforms: linux/arm64,linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}_py3.8
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push v3.9
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          build-args: PYTHON_VERSION=3.9
+          dockerfile: Dockerfile
+          platforms: linux/arm64,linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}_py3.9
           labels: ${{ steps.meta.outputs.labels }}
