--- a/environment3.11.yml
+++ b/environment3.11.yml
@@ -15,12 +15,10 @@ dependencies:
       - plotly
       - kaleido
       - mypy
-      - flake8
+      - ruff
       - black
-      - pylint
       - rich
       - rich-cli
-      - isort
       - coverage
       - pytest
       - pytest-check
