--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        python_version: ["3.9", "3.10", "3.11","3.12"]
+        python_version: ["3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout repository
